Refactor frontend and backend setup for Document RAG application
- Added Docker configuration for the entire application stack
- Implemented FastAPI backend with PostgreSQL and pgvector support
- Created database initialization script for pgvector extension
- Added environment variable configuration for Docker
- Established Dockerfile for both frontend and backend services
- Included troubleshooting and setup instructions in Docker documentation

--- a/backend-python/requirements.txt
+++ b/backend-python/requirements.txt
@@ -2,9 +2,14 @@ fastapi
 uvicorn[standard]
 sqlalchemy[asyncio]
 asyncpg
+psycopg2-binary
 python-dotenv
 pgvector
 langchain
+langchain-community
 llama-index
 openai
 huggingface-hub
+python-multipart
+PyPDF2
+sentence-transformers
