Add comprehensive tests for backend routes and services, implement frontend API service with error handling, and set up Jest configuration for React testing
- Created tests for API routes in `test_routes.py` covering document listing, ingestion, querying, and selection endpoints.
- Added tests for document selection service in `test_select_docs_service.py`, including various scenarios for valid and invalid UUIDs.
- Implemented a new API service in `api.js` for handling document fetching, ingestion, querying, and selection with proper error handling.
- Configured Jest for the frontend, including setup for testing environment and file mocks.
- Developed tests for the main App component and API service in `App.test.jsx` and `api.test.js`, ensuring functionality and error handling.

--- a/backend-python/requirements.txt
+++ b/backend-python/requirements.txt
@@ -13,3 +13,12 @@ huggingface-hub
 python-multipart
 PyPDF2
 sentence-transformers
+
+# Testing dependencies
+pytest
+pytest-asyncio
+pytest-mock
+httpx
+pytest-cov
+factory-boy
+faker
