Enhance FastAPI backend with performance optimizations and rate limiting features
- Updated Dockerfile to support production dependencies for performance enhancements.
- Expanded README with detailed performance features and configuration options.
- Implemented health check endpoint with performance metrics.
- Added middleware for performance monitoring and async request limiting.
- Integrated Redis for rate limiting and fallback to in-memory storage.
- Created async optimization utilities for improved concurrency handling.
- Added comprehensive unit tests for performance features and async utilities.
- Documented fixes for potential module import errors in Docker environments.
- Separated requirements into basic and production for better dependency management.

--- a/backend-python/Dockerfile
+++ b/backend-python/Dockerfile
@@ -11,9 +11,16 @@ RUN apt-get update && apt-get install -y \
 
 # Copy requirements first for better caching
 COPY requirements.txt .
+COPY requirements-prod.txt .
 
 # Install Python dependencies
-RUN pip install --no-cache-dir -r requirements.txt
+# Use production requirements for enhanced performance features
+ARG INSTALL_PROD=false
+RUN if [ "$INSTALL_PROD" = "true" ] ; then \
+        pip install --no-cache-dir -r requirements-prod.txt ; \
+    else \
+        pip install --no-cache-dir -r requirements.txt ; \
+    fi
 
 # Copy application code
 COPY . .
