--- a/backend-python/requirements.txt
+++ b/backend-python/requirements.txt
@@ -14,6 +14,13 @@ python-multipart
 PyPDF2
 sentence-transformers
 
+# Performance & Rate Limiting (Optional)
+# Uncomment these for enhanced rate limiting and caching
+# slowapi
+# redis
+# aioredis
+asyncio-throttle
+
 # Testing dependencies
 pytest
 pytest-asyncio
