feat: Implement Redis caching for embeddings and query results
- Added a CacheService to manage Redis connections and caching logic.
- Integrated caching into the embedding generation and query processing workflows.
- Introduced a three-layer caching strategy for improved performance.
- Created health check endpoints for monitoring cache status.
- Updated README with detailed caching architecture and performance metrics.
- Added tests for cache service and cached embeddings functionality.
- Configured Redis in Docker for local development and testing.

--- a/.env.docker
+++ b/.env.docker
@@ -11,3 +11,7 @@ HUGGINGFACEHUB_API_TOKEN=your-huggingface-token-here
 POSTGRES_DB=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
+
+# Redis settings for caching
+REDIS_URL=redis://localhost:6379/0
+REDIS_TTL=3600
