--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,23 @@ services:
     networks:
       - rag-network
 
+  # Redis for caching embeddings and query results
+  redis:
+    image: redis:7-alpine
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    command: redis-server --appendonly yes --maxmemory 512mb --maxmemory-policy allkeys-lru
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      - rag-network
+    restart: unless-stopped
+
   # FastAPI Backend
   backend:
     build:
@@ -29,10 +46,13 @@ services:
     environment:
       - DATABASE_URL=postgresql+asyncpg://postgres:postgres@db:5432/postgres
       - PGVECTOR_CONN=postgresql+psycopg2://postgres:postgres@db:5432/postgres
+      - REDIS_URL=redis://redis:6379/0
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - HUGGINGFACEHUB_API_TOKEN=${HUGGINGFACEHUB_API_TOKEN}
     depends_on:
       db:
+        condition: service_healthy
+      redis:
         condition: service_healthy
     volumes:
       - ./backend-python:/app
@@ -62,6 +82,7 @@ services:
 
 volumes:
   postgres_data:
+  redis_data:
 
 networks:
   rag-network:
