--- a/performance.env
+++ b/performance.env
@@ -6,8 +6,11 @@ OPENAI_API_KEY=your_openai_api_key_here
 
 # Performance Configuration
 REDIS_URL=redis://localhost:6379
+REDIS_TTL=3600
 ENABLE_RATE_LIMITING=true
 ENABLE_CACHING=true
+CACHE_EMBEDDINGS=true
+CACHE_QUERIES=true
 
 # Request Timeouts (seconds)
 DEFAULT_TIMEOUT=30.0
